// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`competing style priority 1`] = `
"() => create(Foo, {}, create(Bar, {
  className: "Bar_lt8 Bar_1nq"
}));
css(\`
	/* 2 */
	.Bar_1nq { color: blue }
	/* 2.1 */
	.Bar_lt8 { color: orange }
\`);"
`;

exports[`competing style priority 2`] = `
"() => <Foo><Bar className="Bar_lt8 Bar_1nq" /></Foo>;
css(\`
	/* 2 */
	.Bar_1nq { color: blue }
	/* 2.1 */
	.Bar_lt8 { color: orange }
\`);"
`;

exports[`conditional priority should be higher 1`] = `
"() => create("div", {
  className: !!checked && "element_3ld"
}, create("div", {
  className: "test_7au test_1gc"
}));
css(\`
	/* 1 */
	.test_7au { color: green }
	/* 5 */
	.element_3ld .test_1gc { color: red }
\`);"
`;

exports[`conditional priority should be higher 2`] = `
"() => <div className={!!checked && "element_3ld"}><div className="test_7au test_1gc" /></div>;
css(\`
	/* 1 */
	.test_7au { color: green }
	/* 5 */
	.element_3ld .test_1gc { color: red }
\`);"
`;

exports[`prioritize external (capital-letter) define 1`] = `
"const Foo = ({
  className
}) => create("div", {
  className: classNames("Foo_2t4", className)
}, "Hello");
const Bar = () => create(Foo, {
  className: "Foo_55p"
});
css(\`
	/* 2 */
	.Foo_2t4 { color: red }
	.Foo_55p { color: blue }
\`);"
`;

exports[`prioritize external (capital-letter) define 2`] = `
"const Foo = ({
  className
}) => <div className={classNames("Foo_2t4", className)}>Hello</div>;
const Bar = () => <Foo className="Foo_55p" />;
css(\`
	/* 2 */
	.Foo_2t4 { color: red }
	.Foo_55p { color: blue }
\`);"
`;
